syntax = "proto3";

package products;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Product {
  string id = 1;
  string product_name = 2;
  double product_price = 3;
  bool isInStock = 4;
  string category = 5;
  uint64 createdAtTimestamp = 6;
  uint64 updatedAtTimestamp = 7;
}

service ProductService {
  rpc CreateProduct(Product) returns (Product) {}
  rpc ReadProduct(ProductId) returns (Product) {}
  rpc ReadAllProducts(google.protobuf.Empty) returns (ProductList) {}
  rpc PatchProduct(Product) returns (Product) {}
  rpc DeleteProduct(ProductId) returns (Product) {}
}

message ProductId {
  string id = 1;
}

message ProductList {
  repeated Product data = 1;
}
